# patches-population

./: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
experimentation_data/planning/: case1_planning.xlsx  case2 planning.xlsx  case3_planning.xlsx
ontology/: Activity.owl  Challenge.owl  Profile.owl
ontology/json/: Activity_ontology.json  Challenge_ontology.json  Environment_ontology.json  Person_ontology.json  Profile_ontology.json  Situation_ontology.json  ontology.json
ontology/owl/: Environment.owl  Person.owl  Time.owl
src/ontology_population_project/: gradio_interface.py
src/ontology_population_project/agent-output/Gradio/Bruno/: aggregated_results.json  llama_parser_output.txt  module_extraction_activity.json  module_extraction_challenge.json  module_extraction_environnement.json  module_extraction_person.json  module_extraction_time.json  (+4 more)
src/ontology_population_project/crew/modules_crew/: module_crew.py
src/ontology_population_project/crew/profile_crew/: profile_crew.py
src/ontology_population_project/evaluation/: evaluation.py
src/ontology_population_project/ontology/json/: Time_ontology.json
src/ontology_population_project/ontology/owl/: Activity.owl  Challenge.owl  Person.owl  Profile.owl  Situation.owl  Time.owl  catalog-v001.xml
src/ontology_population_project/pydantic_types/: activity_types.py  challenge_types.py  environnement_types.py  person_types.py  profile_types.py  situation_types.py  time_types.py
src/ontology_population_project/tools/: aggregate_json.py  parsing_tool.py  read_mongodb.py
(+17 files in other folders)
